solve bug on project pro cards + nowrap on tableofcontent title

--- a/app/assets/stylesheets/components/navigations/_table_of_content.scss
+++ b/app/assets/stylesheets/components/navigations/_table_of_content.scss
@@ -6,6 +6,8 @@
   h5 {
     background-color: $complementary;
     padding: 0.5rem;
+    border-radius: 0.5rem;
+    text-wrap: nowrap;
   }
 
   ul {
